uefi-macros/tests/ui/guid_bad_length.stderr
error: "aaaaaaaa-aaaa-aaaa-aaaa-aaaaaaaaaaa" is not a canonical GUID string (expected 36 bytes, found 35)
 --> tests/ui/guid_bad_length.rs:5:30
  |
5 | const TooShort: Guid = guid!("aaaaaaaa-aaaa-aaaa-aaaa-aaaaaaaaaaa");
  |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
